--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Base Apparel coming soon page</title>
     <link rel="icon" type="image/x-icon" href="imgs/favicon-32x32.png" />
     <link rel="stylesheet" href="style.css" />
+    <script src="index.js"></script>
   </head>
   <body>
     <main>
