Begun Work On Mobile View

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
             src="imgs/hero-desktop.jpg"
             alt="Picture of brand representative"
           />
+          <img id="mobileImg" src="imgs/hero-mobile.jpg" alt="Picture of brand
+          representative for mobile displays"
         </div>
       </div>
     </main>
